--- a/public/dusoft_duana/NotasProveedores/views/index.html
+++ b/public/dusoft_duana/NotasProveedores/views/index.html
@@ -9,7 +9,7 @@
 <div class="panel panel-primary">
     <div class="panel-heading" >Buscar Proveedores</div> <!-- style="background: #0f528c;" -->
     <div class="panel-body" id="search_provider">
-        <div class="col-md-12">
+        <form class="col-md-12" ng-submit="listarNotasProveedores()">
             <div class="col-md-2 col-lg-1">
                 <label for="">Tipo Documento </label>
                 <button type="button" class="form-control btn btn-default dropdown-toggle ng-binding" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{tipoDoc}} <span class="caret"></span></button>
@@ -45,12 +45,12 @@
             <div class="col-sm-12 col-lg-2" style="display: flex; justify-content: center; min-width: 10%">
                 <div class="col-sm-3 col-lg-12">
                     <label for=""><br></label>
-                    <button ng-click="listarNotasProveedores()" class="form-control btn cyan">
+                    <button type="submit" ng-click="" class="form-control btn cyan">
                         <i class="glyphicon glyphicon-search"></i> FILTRAR
                     </button>
                 </div>
             </div>
-        </div>
+        </form>
     </div><br>
 </div><br>
 
