--- a/public/dusoft_duana/sistema/views/sistema/dashboard.html
+++ b/public/dusoft_duana/sistema/views/sistema/dashboard.html
@@ -1,63 +1,105 @@
- <style>
-	#scrollArea {
-	  height: 280px;
-	  overflow: auto;
-	}
+<style>
+    #scrollArea {
+        height: 280px;
+        overflow: auto;
+    }
 
-	#bottom {
-	  display: block;
-	  margin-top: 2000px;
-	}
+    #bottom {
+        display: block;
+        margin-top: 2000px;
+    }
 </style>
+
 <div class="row" ng-controller="SistemaController">
-
-	<div class="col-md-8">
-		<h3>Memoria</h3>  
-		<span>Uso actual : {{memoria}}</span> 
+    <div class="col-md-8">
+        <h3>Memoria</h3>
+        <span>Uso actual : {{memoria}}</span>
         <nvd3-line-chart
-        data="datosGrafico"
-        id="uso-memoria"
-        showXAxis="true"
-        showYAxis="true"
-        objectequality="true"
-        margin="{left:100,top:50,bottom:100,right:10}"
-        tooltips="true"
-    	yAxisLabel="Memoria"
-        xAxisLabel="Tiempo"
-        width="900"
-        height="400">
-    	</nvd3-line-chart>
-	</div>	
-
-	<div class="col-md-4">
-		<h3>Peticiones</h3>  
-		<span>Promedio actual : {{promedioActual}}</span> 
-		<table class="table table-dark" style="margin-top: 2em !important;">
-			<thead>
-		    <tr>
-		      <th scope="col">Tiempo</th>
-		      <th scope="col">Promedio</th>
-		    </tr>
-		  </thead>
-		  <tbody>
-		    <tr>
-		      <th scope="row">1 Minuto</th>
-		      <td>{{promedio1Min}}</td>
-		    </tr>
-		    <tr>
-		      <th scope="row">5 Minutos</th>
-		      <td>{{promedio5Min}}</td>
-		    </tr>
-		    <tr>
-		      <th scope="row">15 Minutos</th>
-		      <td>{{promedio15Min}}</td>
-		    </tr>
-		    <tr>
-		      <th scope="row">Total</th>
-		      <td>{{promedioTotal}}</td>
-		    </tr>
-		  </tbody>
-		</table>
-	</div>
-
+                data="datosGrafico"
+                id="uso-memoria"
+                showXAxis="true"
+                showYAxis="true"
+                objectequality="true"
+                margin="{left:100,top:50,bottom:100,right:10}"
+                tooltips="true"
+                yAxisLabel="Memoria"
+                xAxisLabel="Tiempo"
+                width="900"
+                height="400">
+        </nvd3-line-chart>
+    </div>
+    <div class="col-md-4">
+        <h3>Peticiones</h3>
+        <span>Promedio actual : {{promedioActual}}</span>
+        <table class="table table-dark" style="margin-top: 2em !important;">
+            <thead>
+            <tr>
+                <th scope="col">Tiempo</th>
+                <th scope="col">Promedio</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <th scope="row">1 Minuto</th>
+                <td>{{promedio1Min}}</td>
+            </tr>
+            <tr>
+                <th scope="row">5 Minutos</th>
+                <td>{{promedio5Min}}</td>
+            </tr>
+            <tr>
+                <th scope="row">15 Minutos</th>
+                <td>{{promedio15Min}}</td>
+            </tr>
+            <tr>
+                <th scope="row">Total</th>
+                <td>{{promedioTotal}}</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+<hr>
+<div class="panel panel-default" ng-repeat="server in monitoreo.servers track by $index">
+    <div class="panel-heading"><b style="font-size: 18px;">Server {{server}}</b></div>
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" ng-repeat="modulo in monitoreo[server].modulos track by $index">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            <h5><b>{{monitoreo[server][modulo].title}}</b></h5>
+                            <div class="contenedor-modulos-btns">
+                                <button type="button" ng-disabled={{action.disable}} ng-repeat="action in monitoreo[server][modulo].actions track by $index" class={{action.class}} ng-click="sshConnection(modulo, action.name, server)">{{action.title}}</button>
+                            </div>
+                            <br>
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                    <div class="col-sm-12 console-format">
+                                        <table class="tablePc" ng-repeat="obj in monitoreo[server][modulo].obj track by $index">  <!-- ng-repeat="(key, title) in modulo.obj track by $index" -->
+                                            <tr style="height: 20px;">
+                                                <td colspan="100%" style="text-align: center; padding-top: 0px; padding-bottom: 6px; ">
+                                                    {{obj.title}}
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <th class="header" ng-repeat="head in obj.header">
+                                                    {{head}}
+                                                </th>
+                                            </tr>
+                                            <tr ng-repeat="items in obj.rows track by $index">
+                                                <td ng-repeat="item in items track by $index">
+                                                    {{item}}
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
