algunos arreglos de estilos en Notas Proveedores

--- a/public/dusoft_duana/NotasProveedores/views/index.html
+++ b/public/dusoft_duana/NotasProveedores/views/index.html
@@ -7,7 +7,9 @@
 <body>
 
 <div class="panel panel-primary">
-    <div class="panel-heading" >Buscar Proveedores</div> <!-- style="background: #0f528c;" -->
+    <div class="panel-heading">
+        <h5 style="font-weight: bolder; text-align: left; margin:2px;">Buscador</h5>
+    </div> <!-- style="background: #0f528c;" -->
     <div class="panel-body" id="search_provider">
         <form class="col-md-12" ng-submit="listarNotasProveedores()">
             <div class="col-md-2 col-lg-1">
@@ -55,7 +57,9 @@
 </div><br>
 
 <div class="panel panel-primary">
-    <div class="panel-heading title-container-nota">Notas del Proveedor</div>
+    <div class="panel-heading title-container-nota">
+        <h5 style="font-weight: bolder; text-align: center; margin:2px;">Facturas Proveedor</h5>
+    </div>
     <div class="panel-body">
         <div class="container-table">
             <div class="table-responsive">
