--- a/public/dusoft_duana/planillasdespacho/views/generarplanilladespacho/gestionarLios.html
+++ b/public/dusoft_duana/planillasdespacho/views/generarplanilladespacho/gestionarLios.html
@@ -26,13 +26,13 @@
 
     <div class="panel panel-info panelCaja">
         <div class="panel-heading">
-            <h3 class="panel-title">Cantidad total de:  Cajas / Neveras / Lios</h3>
+            <h3 class="panel-title">Cantidad total de:  Cajas / Neveras / Bolsas / Lios</h3>
         </div>
         <div class="panel-body">
             <div class="row">
 
 
-                <div class="col-lg-4">
+                <div class="col-lg-3">
                     
                     <div class="input-group input-group">
                         <label class="lbl_editar_producto lbl_caja" for="numerocaja">Cajas </label>
@@ -42,7 +42,7 @@
                      
                 </div>
                 
-                <div class="col-lg-4">
+                <div class="col-lg-3">
                     
                     <div class="input-group input-group">
                         <label class="lbl_editar_producto lbl_caja" for="numerocaja">Neveras </label>
@@ -52,7 +52,17 @@
                      
                 </div>
                 
-                <div class="col-lg-4">
+                <div class="col-lg-3">
+                    
+                    <div class="input-group input-group">
+                        <label class="lbl_editar_producto lbl_caja" for="numerocaja">Bolsas </label>
+                        <input type="text" role="group" ng-model="root.cantidadBolsas" class="form-control"   validacion-numero />
+
+                    </div>
+                     
+                </div>
+                
+                <div class="col-lg-3">
                     
                     <div class="input-group input-group">
                         <label class="lbl_editar_producto lbl_caja" for="numerocaja">Lios </label>
