--- a/public/dusoft_duana/planillasdespacho/views/generarplanilladespacho/modificarDocumentos.html
+++ b/public/dusoft_duana/planillasdespacho/views/generarplanilladespacho/modificarDocumentos.html
@@ -15,8 +15,6 @@
                 <br>
 
                 <div class="row">
-                    <div class="col-md-1" >
-                    </div>
                     <div class="col-md-3" >
                         <div class="row">
                             <div class="col-md-12">
@@ -45,6 +43,17 @@
                             <div class="row">  
                                 <div class="col-md-12">
                                     <input type="text" class="form-control" ng-model="DocModificar.cantidad_neveras" name="" id=""/>
+                                </div>
+                            </div>
+                        </fieldset>
+                    </div>
+                    <div class="col-md-3">
+
+                        <fieldset>
+                            <legend>Cantidad Bolsas</legend>                                 
+                            <div class="row">  
+                                <div class="col-md-12">
+                                    <input type="text" class="form-control" ng-model="DocModificar.cantidad_bolsas" name="" id=""/>
                                 </div>
                             </div>
                         </fieldset>
